Add random sequence option

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 
         <div id=config>
             <form onsubmit="changeLevel()">
+                <p class="checkbox" >
+                    <input type="checkbox" id="check-random" value="random"> Random
+                </p>                
                 <input class="btn" type="button" value="<<" onclick="onPrevPrevBtn()">
                 <input class="btn" type="button" value="<" onclick="onPrevBtn()">
                 <input type="text" id="str-level" readonly="readonly">
